--- a/Project - 01 (DS in WEB)/HomePage/index.html
+++ b/Project - 01 (DS in WEB)/HomePage/index.html
@@ -4,11 +4,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DS in Web</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../colors.css">
 </head>
 <body>
     <div class="header">
         DATA STRUCTURE
     </div>
-    <div class="main"></div>
+    <div class="main">
+        <a href="#">-----</a>
+        <a href="#">-----</a>
+        <a href="#">-----</a>
+        <a href="#">-----</a>
+        <a href="#">-----</a>
+        <a href="#">-----</a>
+        <a href="#">-----</a>
+    </div>
 </body>
 </html>
