new file of stack and midified code

--- a/Project - 01 (DS in WEB)/HomePage/index.html
+++ b/Project - 01 (DS in WEB)/HomePage/index.html
@@ -11,13 +11,13 @@
         DATA STRUCTURE
     </div>
     <div class="main">
-        <a href="#">-----</a>
-        <a href="#">-----</a>
-        <a href="#">-----</a>
-        <a href="#">-----</a>
-        <a href="#">-----</a>
-        <a href="#">-----</a>
-        <a href="#">-----</a>
+        <a href="#">Array</a>
+        <a href="#">Stack</a>
+        <a href="#">Queue</a>
+        <a href="#">Linked List</a>
+        <a href="#">Tree</a>
+        <a href="#">Graph</a>
+        <!-- <a href="#">-----</a> -->
     </div>
 </body>
 </html>
