changes in stack

--- a/Project - 01 (DS in WEB)/LinkedList/index.html
+++ b/Project - 01 (DS in WEB)/LinkedList/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="header">
-        Linked List
+        Stack
     </div>
 
     <!-- selection of function -->
@@ -34,7 +34,7 @@
                     <option value="0">-- Select --</option>
                     <option value="1">insertAtEnd</option>
                     <option value="2">insertAtFirst</option>
-                    <option value="3">insertAt</option>
+                    <option value="3">insertAtIndex</option>
                     <option value="4">deleteByIndex</option>
                     <option value="5">deleteByValue</option>
                 </select>
@@ -59,13 +59,12 @@
         </div>
     </div>
 
-    <!-- display linkedList  -->
+    <!-- display Stack  -->
     <div class="main">
         <div id="linkedlist">
             <!-- Nodes of linkedList -->
         </div>
     </div>
-
 
     <!-- Complete Code of LinkedList  -->
     <div id="background">
