--- a/Project - 01 (DS in WEB)/Stack/index.html
+++ b/Project - 01 (DS in WEB)/Stack/index.html
@@ -60,8 +60,8 @@
     </div>
 
     <!-- display Stack  -->
-    <div class="container">
-        <div class="box">
+    <div class="main">
+        <div class="stack">
             <div class="side left"></div>
             <div class="side right"></div>
             <div class="side bottom"></div>
