--- a/Project - 01 (DS in WEB)/Stack/index.html
+++ b/Project - 01 (DS in WEB)/Stack/index.html
@@ -60,7 +60,7 @@
     </div>
 
     <!-- display Stack  -->
-    <div class="container">
+    <div class="main">
         <div class="box">
             <div class="side left"></div>
             <div class="side right"></div>
