--- a/Project - 01 (DS in WEB)/LinkedList/index.html
+++ b/Project - 01 (DS in WEB)/LinkedList/index.html
@@ -2,13 +2,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DS in Web</title>
+    <title>Linked List</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="../colors.css">
 </head>
 <body>
     <div class="header">
-        Stack
+        Linked List
     </div>
 
     <!-- selection of function -->
