--- a/Project - 01 (DS in WEB)/Stack/index.html
+++ b/Project - 01 (DS in WEB)/Stack/index.html
@@ -84,6 +84,6 @@
 <!--  <div class="node"> <div class="num"> <div>1</div> </div> <div></div> </div>     -->
 
     <script src="function.js"></script>
-    <script src="script.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
