--- a/Project - 01 (DS in WEB)/LinkedList/index.html
+++ b/Project - 01 (DS in WEB)/LinkedList/index.html
@@ -59,7 +59,7 @@
         </div>
     </div>
 
-    <!-- display Stack  -->
+    <!-- display LinkedList  -->
     <div class="main">
         <div id="linkedlist">
             <!-- Nodes of linkedList -->
