--- a/Project - 01 (DS in WEB)/Stack/index.html
+++ b/Project - 01 (DS in WEB)/Stack/index.html
@@ -62,9 +62,9 @@
     <!-- display Stack  -->
     <div class="main">
         <div class="stack">
-            <div class="side left"></div>
+            <!-- <div class="side left"></div>
             <div class="side right"></div>
-            <div class="side bottom"></div>
+            <div class="side bottom"></div> -->
         </div>
     </div>
 
