--- a/Project - 01 (DS in WEB)/LinkedList/index.html
+++ b/Project - 01 (DS in WEB)/LinkedList/index.html
@@ -5,6 +5,7 @@
     <title>Linked List</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="../colors.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 </head>
 <body>
     <div class="header">
@@ -55,7 +56,7 @@
         </div>
         <!-- to give Message for error or something else -->
         <div class="status" id="status">
-            Status
+            Status / Message
         </div>
     </div>
 
@@ -156,9 +157,6 @@
         </div>
     </div>
         
-
-<!--    The div below is the Node of linkedList     -->
-<!--  <div class="node"> <div class="num"> <div>1</div> </div> <div></div> </div>     -->
 
     <script src="function.js"></script>
     <script src="script.js"></script>
