Linked List Final

--- a/Project - 01 (DS in WEB)/LinkedList/index.html
+++ b/Project - 01 (DS in WEB)/LinkedList/index.html
@@ -52,7 +52,7 @@
     <div class="statusbar">
 
         <div class="button">
-            <button onclick="enter()" class="execution"> Enter </button>
+            <button onclick="runSelectedFunction()" class="execution"> Enter </button>
         </div>
         <!-- to give Message for error or something else -->
         <div class="status" id="status">
