--- a/Project - 01 (DS in WEB)/LinkedList/index.html
+++ b/Project - 01 (DS in WEB)/LinkedList/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Linked List</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="../colors.css">
+    <link rel="stylesheet" href="../Colors/Dark.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 </head>
 <body>
@@ -55,7 +55,7 @@
             <button onclick="runSelectedFunction()" class="execution"> Enter </button>
         </div>
         <!-- to give Message for error or something else -->
-        <div class="status" id="status">
+        <div class="status">
             Status / Message
         </div>
     </div>
