--- a/Project - 01 (DS in WEB)/Stack/index.html
+++ b/Project - 01 (DS in WEB)/Stack/index.html
@@ -34,7 +34,7 @@
                     <option value="0">-- Select --</option>
                     <option value="1">push</option>
                     <option value="2">pop</option>
-                    <option value="3">peek</option>
+                    <option value="3">peep</option>
                     <option value="4">change</option>
                     <option value="5">size</option>
                 </select>
