Stack is almost complete

--- a/Project - 01 (DS in WEB)/Stack/index.html
+++ b/Project - 01 (DS in WEB)/Stack/index.html
@@ -36,7 +36,7 @@
                     <option value="2">pop</option>
                     <option value="3">peep</option>
                     <option value="4">change</option>
-                    <option value="5">size</option>
+                    <!-- <option value="5">size</option> -->
                 </select>
             </div>
         </div>
