--- a/Project - 01 (DS in WEB)/Stack/index.html
+++ b/Project - 01 (DS in WEB)/Stack/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DS in Web</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="../colors.css">
+    <link rel="stylesheet" href="../Colors/Dark.css">
 </head>
 <body>
     <div class="header">
